--- a/ref.bib
+++ b/ref.bib
@@ -17,12 +17,14 @@
   pages={151},
   year={2023}
 }
-@misc{Kholevo,
-  title={Квантовые системы, каналы, информация},
-  author={Холево, Александр Семёнович},
-  year={2010},
-  publisher={МЦНМО, Москва}
+
+@book{Kholevo,
+  title={Quantum systems, channels, information: a mathematical introduction},
+  author={Holevo, Alexander S},
+  year={2019},
+  publisher={Walter de Gruyter GmbH \& Co KG}
 }
+
 @article{MaslovN,
   title={High-yield, wafer-scale fabrication of ultralow-loss, dispersion-engineered silicon nitride photonic circuits},
   author={Liu, Junqiu and Huang, Guanhao and Wang, Rui Ning and He, Jijun and Raja, Arslan S and Liu, Tianyi and Engelsen, Nils J and Kippenberg, Tobias J},
@@ -63,3 +65,126 @@
   year={2019},
   publisher={World Scientific}
 }
+
+
+@article{joneckis1993quantum,
+  title={Quantum propagation in a Kerr medium: lossless, dispersionless fiber},
+  author={Joneckis, Lance G and Shapiro, Jeffrey H},
+  journal={JOSA B},
+  volume={10},
+  number={6},
+  pages={1102--1120},
+  year={1993},
+  publisher={Optica Publishing Group}
+}
+
+@article{bolandhemmat2023quantum,
+  title={Quantum dynamics of a driven parametric oscillator in a Kerr medium},
+  author={Bolandhemmat, E and Kheirandish, F},
+  journal={Scientific Reports},
+  volume={13},
+  number={1},
+  pages={9056},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{roman2015parametric,
+  title={Parametric oscillator in a Kerr medium: evolution of coherent states},
+  author={Rom{\'a}n-Ancheyta, R and Berrondo, M and R{\'e}camier, J},
+  journal={JOSA B},
+  volume={32},
+  number={8},
+  pages={1651--1655},
+  year={2015},
+  publisher={Optica Publishing Group}
+}
+
+@article{meretukov2024time,
+  title={On Time-Dependent Projectors and a Generalization of the Thermodynamical Approach in the Theory of Open Quantum Systems},
+  author={Meretukov, Kh Sh and Teretenkov, AE},
+  journal={Proceedings of the Steklov Institute of Mathematics},
+  volume={324},
+  number={1},
+  pages={135--152},
+  year={2024},
+  publisher={Springer}
+}
+
+@article{asjad2023joint,
+  title={Joint quantum estimation of loss and nonlinearity in driven-dissipative Kerr resonators},
+  author={Asjad, Muhammad and Teklu, Berihu and Paris, Matteo GA},
+  journal={Physical Review Research},
+  volume={5},
+  number={1},
+  pages={013185},
+  year={2023},
+  publisher={APS}
+}
+
+@article{corney2015non,
+  title={Non-Gaussian pure states and positive Wigner functions},
+  author={Corney, JF and Olsen, MK},
+  journal={Physical Review A},
+  volume={91},
+  number={2},
+  pages={023824},
+  year={2015},
+  publisher={APS}
+}
+
+@article{genoni2009enhancement,
+  title={Enhancement of parameter estimation by Kerr interaction},
+  author={Genoni, Marco G and Invernizzi, Carmen and Paris, Matteo GA},
+  journal={Physical Review A—Atomic, Molecular, and Optical Physics},
+  volume={80},
+  number={3},
+  pages={033842},
+  year={2009},
+  publisher={APS}
+}
+
+@article{banerjee1993interaction,
+  title={Interaction of squeezed light with a Kerr medium},
+  author={Banerjee, Arup},
+  journal={Quantum Optics: Journal of the European Optical Society Part B},
+  volume={5},
+  number={1},
+  pages={15},
+  year={1993},
+  publisher={IOP Publishing}
+}
+
+@article{kawasaki1973theory,
+  title={Theory of nonlinear transport processes: Nonlinear shear viscosity and normal stress effects},
+  author={Kawasaki, Kyozi and Gunton, James D},
+  journal={Physical Review A},
+  volume={8},
+  number={4},
+  pages={2048},
+  year={1973},
+  publisher={APS}
+}
+
+@article{rau1996reversible,
+  title={From reversible quantum microdynamics to irreversible quantum transport},
+  author={Rau, Jochen and M{\"u}ller, Berndt},
+  journal={Physics Reports},
+  volume={272},
+  number={1},
+  pages={1--59},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{semin2020dynamical,
+  title={Dynamical and thermodynamical approaches to open quantum systems},
+  author={Semin, Vitalii and Petruccione, Francesco},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={2607},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
